--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 
   <body class="font-sans bg-gradient-to-br from-blue-50 to-purple-50 min-h-screen">
